--- a/vRABot/default.htm
+++ b/vRABot/default.htm
@@ -6,7 +6,7 @@
 </head>
 <body style="font-family:'Segoe UI'">
     <h1>vRABot</h1>
-    <p>Describe your bot here and your terms of use etc.</p>
-    <p>Visit <a href="https://www.botframework.com/">Bot Framework</a> to register your bot. When you register it, remember to set your bot's endpoint to <pre>https://<i>your_bots_hostname</i>/api/messages</p>
+    <iframe src="https://webchat.botframework.com/embed/vrabot?s=_ch1RoL3JV4.cwA.wpo.SzwFrehwjLy21etkKa7p_d0Vj9EpVNTJRitBfkQlH7Y" style="height: 702px; max-height: 702px;"></iframe>    
+    <a href='https://join.skype.com/bot/695bb6b1-52ef-4c69-a51b-f11db0ba2a4f'><img src='https://dev.botframework.com/Client/Images/Add-To-Skype-Buttons.png'></a>
 </body>
 </html>
